@@ -15,19 +15,12 @@ GtkTreeView bindings (eg, ^N) override menu bindings.
 
 File2.html comes before File.html. Also, very large numbers aren't handled.
 
-Can't drag to a selected item (from another window).
-
 Adding a directory to the panel and then changing it to an application doesn't
 hide the text.
 
 When the minibuffer is highlighted in red, scanning more items should recheck.
 
-Using spring-opening with a missing directory has grab problems (Gkt+
-problem?).
-
 Escape text/uri-list.
-
-Keep the title up-to-date for iconified windows.
 
 Symlinks to mount points work strangely (Daniele Peri).
 
