@@ -2,6 +2,14 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+09-Feb-2003
+~~~~~~~~~~~
+Allow dragging to a selected directory as long as it's not the source of the
+drag.
+If an error occurs opening a directory then don't report it in an error box if
+a drag-and-drop operation is in progress.
+Keep the title up-to-date for iconified windows.
+
 08-Feb-2003
 ~~~~~~~~~~~
 Changing the icon for a MIME type updates all filer windows.
